DOCS-3817: Fix layout issue for tables

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1877,6 +1877,11 @@ ul.sectionlist > li:hover {
   border: none;
 }
 
+.td-content > .table * ol.ais-Hits-list,
+.td-content * .table * ol.ais-Hits-list {
+  margin-left: 0rem;
+}
+
 #hits .ais-Hits-list {
   list-style-type: none;
   display: flex;
